--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,7 +37,23 @@ dependencies:
   cupertino_icons: ^1.0.6
   animated_splash_screen: ^1.3.0
   flutter_staggered_animations: ^1.1.1
-  carousel_slider: ^4.2.1
+  google_maps_flutter: ^2.9.0
+  geolocator: ^12.0.0
+  permission_handler: ^11.3.1
+  google_fonts: ^6.2.1
+  flutter_riverpod: ^2.5.1
+  outline_material_icons: ^1.0.0
+  provider: ^6.1.2
+  flutter_polyline_points: ^2.1.0
+  http: ^1.2.2
+  shared_preferences: ^2.3.2
+  firebase_auth: ^5.1.4
+  firebase_storage: ^12.1.3
+  firebase_database: ^11.0.4
+  firebase_core: ^3.3.0
+  carousel_slider: ^5.0.0
+  
+  
 
 dev_dependencies:
   flutter_test:
