--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -61,6 +61,8 @@ flutter {
 dependencies {
   // Import the Firebase BoM
   implementation platform('com.google.firebase:firebase-bom:33.1.2')
+  implementation("com.google.firebase:firebase-messaging")
+  implementation("com.google.firebase:firebase-analytics")
 
 
   // TODO: Add the dependencies for Firebase products you want to use
