--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -52,6 +52,8 @@ dependencies:
   firebase_database: ^11.0.4
   firebase_core: ^3.3.0
   carousel_slider: ^5.0.0
+  flutter_geofire: ^2.0.3
+  firebase_messaging: ^15.0.4
   
   
 
