--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -54,6 +54,8 @@ dependencies:
   carousel_slider: ^5.0.0
   flutter_geofire: ^2.0.3
   firebase_messaging: ^15.0.4
+  googleapis: ^13.2.0
+  googleapis_auth: ^1.6.0
   
   
 
